templates/todo/projects/nodejs-mongo-aks/src/api/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - name: todo-api
          image: ${AZURE_CONTAINER_REGISTRY_ENDPOINT}/todo-nodejs-mongo-aks/api:latest
          ports:
            - containerPort: 3100
