templates/todo/projects/nodejs-mongo-aks/src/api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3100
  selector:
    app: todo-api
